Fix mobile layout issue on portfolio page, add transition to hover labels on portfolio page

--- a/_sass/_mixins.sass
+++ b/_sass/_mixins.sass
@@ -32,7 +32,7 @@
 /** Transitions and Animations
   */
 =transition-ease($speed: .25s, $timing-function: ease-in-out)
-  transition: $speed $timing-function
+  transition: $speed $timing-function all
 
 =fade-on-load($speed: .8s)
   animation: fade-in-scale $speed
