--- a/_sass/_responsive.sass
+++ b/_sass/_responsive.sass
@@ -9,7 +9,7 @@
     padding: 3em 5em 1.8em
 
   #portfolio .panel .portfolio-images
-    max-width: 90%
+    padding: 2em 0 0
 
   #projects
     .portfolio-links
@@ -220,8 +220,17 @@
     align-items: center
 
     .portfolio-images
+      max-width: 100%
       margin: 4em auto
       padding: 0
+
+      .selectable-image .hover-label
+        max-width: 8em
+        padding-right: 2em
+        margin: 0 auto
+        text-align: left
+        font-size: 0.6em
+        opacity: 1
 
   #projects
     .portfolio-links
